Fix incorrect type annotation of Luracast\Restler\RestException
The type is also now enforced in the constructor signature which means
this version of Restler is not compatible with PHP 5 anymore.

(cherry picked from commit 416dfa9ee095d5cda3fa9f522e617acefd9cdaf2)

--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "bshaffer/oauth2-server-php":"If you want to use OAuth2 for authentication"
     },
     "require":{
-        "php": ">=5.4",
-        "ext-json": "*"
+        "php":">=7.2"
     },
     "require-dev":{
         "ext-libxml": "*",
