--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "bshaffer/oauth2-server-php":"If you want to use OAuth2 for authentication"
     },
     "require":{
-        "php":">=7.2"
+        "php":">=7.2",
+        "doctrine/instantiator":"^1.3"
     },
     "require-dev":{
         "guzzlehttp/guzzle":"3.8.1",
